# cc-viewer

./: .gitignore  CLAUDE.md  Cargo.toml  Procfile  README.md  flake.nix
.github/workflows/: docs.yml
artifacts/: devlog.md
artifacts/skills/: headless-wgpu-screenshot-via-xvfb-software-gl.md
docs/: book.toml
docs/src/: SUMMARY.md  controls.md  getting-started.md  graph-guide.md  introduction.md
docs/src/arch/: data-pipeline.md  file-watching.md  overview.md  rendering.md
docs/src/internals/: camera.md  graph-construction.md  jsonl-format.md  layout.md  text-rendering.md  wgpu-pipeline.md
docs/src/reference/: data-types.md  source-map.md  wasm.md
scripts/: capture_demo.sh  screenshots.sh
src/: app.rs  main.rs
src/data/: mod.rs  native.rs  parse.rs  source.rs  types.rs
src/graph/: build.rs  grouping.rs  layout.rs  mod.rs  state.rs
src/render/: callback.rs  canvas.rs  mod.rs  text.rs
src/ui/: overlay.rs
