[package]
name = "cc-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
egui-wgpu = "0.31"
wgpu = "24"
glyphon = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
crossbeam-channel = "0.5"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
